--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 <body>
     <div class="wrapper">
         <img class="dog-image" src="https://media.giphy.com/media/cYZkY9HeKgofpQnOUl/giphy.gif?cid=790b76110ypmlq3ipqf3xr9xvuxozs8lyfn4z30u5mowu2md&ep=v1_gifs_search&rid=giphy.gif&ct=g" alt="dog with shampoo" height="400">
+        <img class="cute-puppy" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExMHlwbWxxM2lwcWYzeHI5eHZ1eG96czhseWZuNHozMHU1bW93dTJtZCZlcD12MV9naWZzX3NlYXJjaCZjdD1n/KztT2c4u8mYYUiMKdJ/giphy.gif"  style="display: none;" height="250"/>
         <h1 class="text">Will you be my valentine?</h1>
         <div class="action">
-            <button type="button" class="yes">YES</button>
             <button type="button" class="no">NO</button>
+            <button type="button" class="yes">YES</button>
         </div>
     </div>
+    <button class=reload>&#x21bb;</span>
 
     <script src="app.js"></script>
 </body>
